--- a/index.html
+++ b/index.html
@@ -2,43 +2,7 @@
 <html>
 <head>
   <title>Login</title>
-  <style>
-
-    .container {
-  width: 300px;
-  margin: 0 auto;
-  padding: 20px;
-  background: #f2f2f2;
-  border-radius: 5px;
-}
-
-h2 {
-  text-align: center;
-}
-
-form label {
-  display: block;
-  margin-top: 10px;
-}
-
-form input {
-  width: 100%;
-  padding: 8px;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  box-sizing: border-box;
-}
-
-form button {
-  width: 100%;
-  padding: 10px;
-  background: #4CAF50;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <div class="container">
@@ -53,5 +17,41 @@ form button {
       <button type="submit">Login</button>
     </form>
   </div>
+
+  <script>
+    // Get references to the form and input fields
+    const loginForm = document.getElementById("loginForm");
+    const usernameInput = document.getElementById("username");
+    const passwordInput = document.getElementById("password");
+
+    // Define the valid credentials
+    const validCredentials = {
+      username: "admin",
+      password: "password123"
+    };
+
+    // Handle form submission
+    loginForm.addEventListener("submit", function(event) {
+      event.preventDefault(); // Prevent the default form submission
+
+      // Get the entered username and password
+      const enteredUsername = usernameInput.value;
+      const enteredPassword = passwordInput.value;
+
+      // Check if the entered credentials match the valid credentials
+      if (enteredUsername === validCredentials.username && enteredPassword === validCredentials.password) {
+        // Authentication successful
+        alert("Authentication successful! Redirecting to the authenticated page...");
+        // Perform any necessary redirection to the authenticated page
+        // For example: window.location.href = "authenticated.html";
+      } else {
+        // Authentication failed
+        alert("Invalid username or password. Please try again.");
+        // Clear the input fields
+        usernameInput.value = "";
+        passwordInput.value = "";
+      }
+    });
+  </script>
 </body>
 </html>
